docker/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform
  labels:
    app.kubernetes.io/part-of: data-platform-pro
