docker/k8s/10-nacos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nacos
  namespace: data-platform
  labels:
    app: nacos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nacos
  template:
    metadata:
      labels:
        app: nacos
    spec:
      containers:
        - name: nacos
          image: nacos/nacos-server:v2.3.2
          ports:
            - containerPort: 8848
              name: http
            - containerPort: 9848
              name: grpc
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          volumeMounts:
            - name: nacos-logs
              mountPath: /home/nacos/logs
      volumes:
        - name: nacos-logs
          persistentVolumeClaim:
            claimName: nacos-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nacos
  namespace: data-platform
spec:
  type: ClusterIP
  ports:
    - port: 8848
      name: http
    - port: 9848
      name: grpc
  selector:
    app: nacos
